Revision history for Perl extension IPC::Shareable.

1.02 UNREL
    - Remove erroneous listing from MANIFEST

1.01    2021-06-24
    - Added 'graceful' flag option. With exclusive, if a second process
      attempts to tie an exclusive segment, we exit gracefully instead of
      croaking

1.00    2021-06-09
    - Added global_register() and process_register() to return the
      registries of active segments and semaphores
    - Added seg() and sem() methods, returns the structure of a shared
      memory segment and a sempahore respectively
    - Added initial "persist" hash variables. Separate processes (even
      multiple files in multiple windows) can share a variable, and it'll
      remain available even after all processes exit. The variable will be
      re-attached if the same shared segment key is used in subsequent runs
    - Reversed order of Changes file
    - Removed trace() and debug() code for ease of reading
    - Improved exception/error messages, added exception testing, reduced
      and minimized the number of exceptions actually uncaught
    - Significant POD cleanup
    - 100% rewrite of all test files, and added a slew of new ones, all
      using Test::More
    - Add build requirement of Test::SharedFork to handle the out of
      sequence fork() tests in t/35-clean.t and t/30-lock_operations
    - Major POD updates
    - Added tests to prove that RT 123057 isn't really an issue (ie. segment
      size parameter works correctly)

0.61  Mon Oct  8 00:27:39 2012
    - Added patch from Frank Lichtenheld fixing IPC::Shareable's dependence
      on the presence of a perl bug which is no longer present in
      perl >= 5.10
    - Fixed bug reported by Dan Harbin where the FETCH operation on a tie()d
      string containing HASH, ARRAY, or SCALAR fails because it was using
      the stringification of the data to determine what kind of reference
      it was.  Now using Scalar::Util::reftype