@@ -27,10 +27,18 @@ if ($record =~ /bytes=(\d+)/s) {
 
 is BYTES, $size, "size param is the same as the segment size";
 
+# ipcs -i doesn't work on MacOS or FreeBSD, so skip it for now
+
 TODO: {
     local $TODO = 'Not yet working on FreeBSD or macOS';
     is $size, $actual_size, "actual size in bytes ok if sending in custom size";
 };
+
+# ...and only run it on Linux systems
+
+if ($^O eq 'linux') {
+    is $size, $actual_size, "actual size in bytes ok if sending in custom size";
+}
 
 $k->clean_up_all;
 
